--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </label>
           <label class="principalContact_form--label for="textarea"
             >Mensaje
-            <textarea name="textarea" id="" cols="30" rows="10" placeholder="Ingrese un mensaje"></textarea>
+            <textarea name="textarea" id="" cols="30" rows="10" placeholder="Por ejemplo: ¡Hola!. Quiero asesoría para mi organización"></textarea>
           </label>
           <button class="principalContact_form--button">Enviar</button>
         </form>
