dejo acá antes de cagarla

--- a/index2.html
+++ b/index2.html
@@ -17,8 +17,8 @@
         </div>
         <nav class="nav" id="nav">
           <ul class="nav_ul" id="nav-ul">
-            <li><a class="nav_ul--a" href="#">¿Qué hacemos?</a></li>
-            <li><a class="nav_ul--a" href="#">¿Cómo trabajamos</a></li>
+            <li><a class="nav_ul--a" href="./index.html">Home</a></li>
+            <li><a class="nav_ul--a" href="./index3.html">¿Cómo trabajamos</a></li>
             <li><button class="nav_ul--button">¡Hablemos!</button></li>
           </ul>
         </nav>
@@ -81,8 +81,8 @@
           <h4 class="footer_logo--subtitle">trabajo y equidad en acción</h4>
         </div>
         <article class="footer_links">
-          <a href="#" >¿Que hacemos?</a>
-          <a href="#" >¿Cómo trabajamos?</a>
+          <a href="./index.html" >Home</a>
+          <a href="./index3.html" >¿Cómo trabajamos?</a>
         </article>
         <article class="footer_workers">
           <h4><strong>Programación: </strong>Ivan Valdez</h4>
