Lista para Github

--- a/index3.html
+++ b/index3.html
@@ -195,6 +195,7 @@
         <h4><strong>Ilustarción: </strong>Fiona Lena Brown</h4>
       </article>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./index.js"></script>
   </body>
 </html>
