--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <header class="header" id="header">
-      <figure class="header_img">
-        <i></i>
-      </figure>
-      <div class="header_button" id="icon">
-        <div class="header_button__bar"></div>
-      </div>
-      <nav class="nav" id="nav">
+      <nav class="nav">
+        <figure class="nav_img">
+          <i></i>
+        </figure>
+        <div class="nav_button" id="icon">
+          <div class="nav_button--bar"></div>
+        </div>
         <ul class="nav_ul" id="nav-ul">
           <li><a class="nav_ul--a" href="./index2.html">¿Qué hacemos?</a></li>
           <li><a class="nav_ul--a" href="./index3.html">¿Cómo trabajamos</a></li>
@@ -24,6 +24,7 @@
         </ul>
       </nav>
     </header>
+
     <main class="main">
       <section class="principals">
         <article class="principal_text">
