--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header" id="header">
       <nav class="nav">
         <figure class="nav_img">
-          <i></i>
+          <a href="./index.html"></a>
         </figure>
         <div class="nav_button" id="icon">
           <div class="nav_button--bar"></div>
