--- a/index2.html
+++ b/index2.html
@@ -8,21 +8,21 @@
     <title>GénerActiva</title>
 </head>
 <body>
-    <header class="header" id="header">
-        <figure class="header_img">
-          <i></i>
-        </figure>
-        <div class="header_button" id="icon">
-          <div class="header_button__bar"></div>
-        </div>
-        <nav class="nav" id="nav">
-          <ul class="nav_ul" id="nav-ul">
-            <li><a class="nav_ul--a" href="./index.html">Home</a></li>
-            <li><a class="nav_ul--a" href="./index3.html">¿Cómo trabajamos</a></li>
-            <li><button class="nav_ul--button">¡Hablemos!</button></li>
-          </ul>
-        </nav>
-      </header>
+  <header class="header" id="header">
+    <nav class="nav">
+      <figure class="nav_img">
+        <a href="./index.html"></a>
+      </figure>
+      <div class="nav_button" id="icon">
+        <div class="nav_button--bar"></div>
+      </div>
+      <ul class="nav_ul" id="nav-ul">
+        <li><a class="nav_ul--a" href="./index.html">Home</a></li>
+        <li><a class="nav_ul--a" href="./index3.html">¿Cómo trabajamos</a></li>
+        <li><button class="nav_ul--button">¡Hablemos!</button></li>
+      </ul>
+    </nav>
+  </header>
     <main class="main">
         <section class="seconds">
             <article class="second_text">
