--- a/index3.html
+++ b/index3.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <header class="header" id="header">
-      <figure class="header_img">
-        <i></i>
-      </figure>
-      <div class="header_button" id="icon">
-        <div class="header_button__bar"></div>
-      </div>
-      <nav class="nav" id="nav">
+      <nav class="nav">
+        <figure class="nav_img">
+          <a href="./index.html"></a>
+        </figure>
+        <div class="nav_button" id="icon">
+          <div class="nav_button--bar"></div>
+        </div>
         <ul class="nav_ul" id="nav-ul">
           <li><a class="nav_ul--a" href="./index.html">Home</a></li>
           <li><a class="nav_ul--a" href="./index2.html">¿Qué hacemos?</a></li>
